--- a/frontend/.env
+++ b/frontend/.env
@@ -1,12 +1,13 @@
-REACT_APP_BACKEND_URL=https://athletic-bidder.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://localhost:8001
+WDS_SOCKET_PORT=0
 REACT_APP_ENABLE_VISUAL_EDITS=true
 ENABLE_HEALTH_CHECK=false
 
-# Firebase Config - Replace with your actual Firebase credentials
-REACT_APP_FIREBASE_API_KEY=your-api-key
-REACT_APP_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=your-project-id
-REACT_APP_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-REACT_APP_FIREBASE_APP_ID=your-app-id
+# Firebase Config - Updated with turgut-auction project credentials
+REACT_APP_FIREBASE_API_KEY=AIzaSyBlhvfDbMecmlxSXnqMa7YQtr7YIWHggXQ
+REACT_APP_FIREBASE_AUTH_DOMAIN=turgut-auction.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=turgut-auction
+REACT_APP_FIREBASE_STORAGE_BUCKET=turgut-auction.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=746646765965
+REACT_APP_FIREBASE_APP_ID=1:746646765965:web:f27b8ea38919ffa5eefdc4
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-27D3M4Y9BR
