--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,16 @@ dist/
 dist
 
 # Environment files (comprehensive coverage)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 *token.json*
 *credentials.json*
+firebase-admin.json
+*firebase-admin*.json
 
 # Logs and debug files
 npm-debug.log*
