--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
-REACT_APP_BACKEND_URL=https://power-auction-app-production.up.railway.app
+REACT_APP_BACKEND_URL=http://localhost:8001
 WDS_SOCKET_PORT=0
-REACT_APP_ENABLE_VISUAL_EDITS=true
+REACT_APP_ENABLE_VISUAL_EDITS=false
 ENABLE_HEALTH_CHECK=false
 
 # Firebase Config - Updated with turgut-auction project credentials
