--- a/frontend/.env
+++ b/frontend/.env
@@ -11,3 +11,8 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=turgut-auction.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=746646765965
 REACT_APP_FIREBASE_APP_ID=1:746646765965:web:f27b8ea38919ffa5eefdc4
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-27D3M4Y9BR
+
+# Cloudinary Config
+REACT_APP_CLOUDINARY_CLOUD_NAME=drok5rkeb
+REACT_APP_CLOUDINARY_API_KEY=328741217195686
+REACT_APP_CLOUDINARY_UPLOAD_PRESET=auction_uploads
