--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-REACT_APP_BACKEND_URL=https://power-auction-app-production.up.railway.app
+# Environment variables for the React frontend
+REACT_APP_BACKEND_URL=http://localhost:8001
 WDS_SOCKET_PORT=0
 REACT_APP_ENABLE_VISUAL_EDITS=false
 ENABLE_HEALTH_CHECK=false
