--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -47,6 +47,7 @@ mypy==1.18.2
 mypy_extensions==1.1.0
 numpy==2.3.3
 oauthlib==3.3.1
+openpyxl==3.1.2
 packaging==25.0
 pandas==2.3.3
 passlib==1.7.4
@@ -89,3 +90,4 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.25.0
 watchfiles==1.1.0
+gunicorn==21.2.0
